--- a/dataset/Dockerfile
+++ b/dataset/Dockerfile
@@ -1,10 +1,14 @@
-FROM python:3.13-slim
+FROM python:3.10-slim
 
 WORKDIR /app
 
-ADD gradio_service.py /app/gradio_service.py
 ADD requirements.txt /app/requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
 
-RUN pip install -r requirements.txt
+ENV PYTHONPATH=/app
+ADD impl /app/impl
+ADD gradio_service.py /app/gradio_service.py
 
+EXPOSE 7860
+ENV GRADIO_SERVER_NAME="0.0.0.0"
 CMD ["python", "gradio_service.py"]
