vllm service, pgvector, dvc removed

--- a/dataset/Dockerfile
+++ b/dataset/Dockerfile
@@ -6,9 +6,5 @@ ADD requirements.txt /app/requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
 ENV PYTHONPATH=/app
-ADD impl /app/impl
-ADD gradio_service.py /app/gradio_service.py
-
-EXPOSE 7860
-ENV GRADIO_SERVER_NAME="0.0.0.0"
-CMD ["python", "gradio_service.py"]
+COPY impl /app/impl
+COPY gradio_service.py /app/gradio_service.py
