--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -1,9 +1,63 @@
 services:
-  dataset:
+  gradio_service:
     build:
       context: ../dataset
       dockerfile: ../dataset/Dockerfile
     volumes:
-      - ../dataset/datafiles:/app/datafiles
+      - images:${IMAGES_PATH}
+    env_file:
+      - path: .env
+        required: true
     ports:
       - 7860:7860
+    environment:
+      - IMAGES_PATH=${IMAGES_PATH}
+      - GRADIO_SERVER_NAME=0.0.0.0
+      - POSTGRES_HOST=db
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+    command: python gradio_service.py
+    links:
+      - db
+    depends_on:
+      - db
+
+  vllm:
+    image: vllm/vllm-openai:latest
+    volumes:
+      - ./cache:/root/.cache/huggingface
+    ipc: host
+    ports:
+      - 8000:8000
+    command:
+      - --model
+      - Qwen/Qwen2-VL-2B-Instruct
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: ${GPU_COUNT:-1}
+              capabilities: [ gpu ]
+
+  db:
+    image: pgvector/pgvector:pg17
+    container_name: pgvector-db
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+    ports:
+      - "5432:5432"
+    env_file:
+      - path: .env
+        required: true
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+      - ./pgvector_init.sql:/docker-entrypoint-initdb.d/init.sql
+
+volumes:
+  hg_cache:
+  pgdata:
+  images:
