dinov2 embedding generator

--- a/infra/.env_template
+++ b/infra/.env_template
@@ -4,3 +4,7 @@ POSTGRES_DB=
 IMAGES_PATH=
 HOST_IMAGES_PATH=./images
 PG_DATA=./pg_data
+MODELS_PATH=./models
+MONGO_USERNAME=fiftyone_user
+MONGO_PASSWORD=fiftyone_pass
+MONGO_DATABASE=fiftyone_db
