--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -9,10 +9,11 @@ services:
       dockerfile: ../dataset/Dockerfile
     volumes:
       - ${HOST_IMAGES_PATH}:${IMAGES_PATH}
-    command: ["python", "-m", "impl.coco_uploader", "--output_dir", "${IMAGES_PATH}"]
+    command: bash -c "python -m impl.coco_uploader && python -m impl.embedding_generator"
     env_file:
       - <<: *common-env
     environment:
+      - IMAGES_PATH=${IMAGES_PATH}
       - FIFTYONE_DATABASE_NAME=${MONGO_DATABASE}
       - FIFTYONE_DATABASE_URI=mongodb://${MONGO_USERNAME}:${MONGO_PASSWORD}@mongodb:27017
       - POSTGRES_HOST=db
